--- a/Swift_Food/Base.lproj/Main.storyboard
+++ b/Swift_Food/Base.lproj/Main.storyboard
@@ -138,15 +138,15 @@
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="109.82142857142857"/>
         </scene>
-        <!--Yummie-->
+        <!--먹거리-->
         <scene sceneID="jvk-NA-Kxu">
             <objects>
                 <viewController id="Yoc-R0-VU6" customClass="HomeViewController" customModule="Swift_Food" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="JwQ-uq-svB">
+                    <view key="view" clipsSubviews="YES" contentMode="scaleToFill" id="JwQ-uq-svB">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cyy-R6-32I">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="always" translatesAutoresizingMaskIntoConstraints="NO" id="Cyy-R6-32I">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="AaY-N1-pUk">
@@ -283,13 +283,13 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="AaY-N1-pUk" secondAttribute="bottom" constant="197" id="3Wz-av-A7V"/>
-                                    <constraint firstAttribute="trailing" secondItem="AaY-N1-pUk" secondAttribute="trailing" constant="69" id="8P3-0Q-7ob"/>
+                                    <constraint firstAttribute="trailing" secondItem="AaY-N1-pUk" secondAttribute="trailing" id="8P3-0Q-7ob"/>
                                     <constraint firstItem="AaY-N1-pUk" firstAttribute="leading" secondItem="Cyy-R6-32I" secondAttribute="leading" id="GQ2-32-Wxa"/>
                                     <constraint firstItem="AaY-N1-pUk" firstAttribute="top" secondItem="Cyy-R6-32I" secondAttribute="top" id="J10-4B-yr8"/>
                                     <constraint firstItem="AaY-N1-pUk" firstAttribute="width" secondItem="Cyy-R6-32I" secondAttribute="width" id="dGO-4u-TaZ"/>
                                 </constraints>
-                                <viewLayoutGuide key="contentLayoutGuide" id="NSB-C2-kbh"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="MHT-Tg-fdr"/>
+                                <viewLayoutGuide key="contentLayoutGuide" id="F7O-QS-V87"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Wlc-1W-MWv"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="yhR-bb-URZ"/>
@@ -301,7 +301,7 @@
                             <constraint firstItem="yhR-bb-URZ" firstAttribute="trailing" secondItem="Cyy-R6-32I" secondAttribute="trailing" id="azR-yh-JTX"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Yummie" id="Aoi-Rg-mKY">
+                    <navigationItem key="navigationItem" title="먹거리" id="Aoi-Rg-mKY">
                         <barButtonItem key="rightBarButtonItem" id="7os-ys-88E">
                             <imageReference key="image" image="cart.circle.fill" catalog="system" symbolScale="default"/>
                             <color key="tintColor" systemColor="systemRedColor"/>
@@ -316,6 +316,107 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Npq-IS-j1V" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1684" y="110"/>
+        </scene>
+        <!--Dish Detail View Controller-->
+        <scene sceneID="6ay-wg-AMD">
+            <objects>
+                <viewController storyboardIdentifier="DishDetailViewController" id="PlL-tN-nol" customClass="DishDetailViewController" customModule="Swift_Food" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YND-L9-lKP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ApX-iz-K21">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="613"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Y1v-AC-gsd" userLabel="verti">
+                                <rect key="frame" x="16" y="629" width="382" height="217"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VBU-Mu-NVm" userLabel="horizontal">
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="24"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3ax-HL-ccS">
+                                                <rect key="frame" x="0.0" y="0.0" width="282" height="24"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="OWE-nS-zLT">
+                                                <rect key="frame" x="282" y="0.0" width="100" height="24"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="f3b-xC-rvz"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" red="0.87825995680000002" green="0.22658047079999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ef8-lE-igS">
+                                        <rect key="frame" x="0.0" y="40" width="382" height="45"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="dsfasdfsdfdsfdsafdsfsdfdsfasdfsdfdsfdsafdsfsdfdsfasdfsdfdsfdsafdsfsdfdsfasdfsdfdsfdsafdsfsdf">
+                                                <attributes>
+                                                    <color key="NSColor" red="0.65850132699999997" green="0.65850132699999997" blue="0.65850132699999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <font key="NSFont" metaFont="system" size="17"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="4" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="주문자 성명" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QjA-12-jxf">
+                                        <rect key="frame" x="0.0" y="101" width="382" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="K60-Xz-E1E"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fde-8z-cFo">
+                                        <rect key="frame" x="0.0" y="167" width="382" height="50"/>
+                                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="n4R-pH-1ec"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="주문확정">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="placeOrderBtnClicked:" destination="PlL-tN-nol" eventType="touchUpInside" id="6zA-7Z-2ZP"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="BKI-ME-ic0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Y1v-AC-gsd" firstAttribute="leading" secondItem="BKI-ME-ic0" secondAttribute="leading" constant="16" id="1Y9-Ca-hEV"/>
+                            <constraint firstItem="BKI-ME-ic0" firstAttribute="trailing" secondItem="Y1v-AC-gsd" secondAttribute="trailing" constant="16" id="35T-mc-ZTa"/>
+                            <constraint firstItem="Y1v-AC-gsd" firstAttribute="top" secondItem="ApX-iz-K21" secondAttribute="bottom" constant="16" id="4Kp-Ar-V9C"/>
+                            <constraint firstItem="ApX-iz-K21" firstAttribute="leading" secondItem="BKI-ME-ic0" secondAttribute="leading" id="8KS-os-Awu"/>
+                            <constraint firstItem="ApX-iz-K21" firstAttribute="trailing" secondItem="BKI-ME-ic0" secondAttribute="trailing" id="8WM-9C-vWQ"/>
+                            <constraint firstItem="ApX-iz-K21" firstAttribute="top" secondItem="YND-L9-lKP" secondAttribute="top" id="mLu-kG-ID6"/>
+                            <constraint firstItem="BKI-ME-ic0" firstAttribute="bottom" secondItem="Y1v-AC-gsd" secondAttribute="bottom" constant="16" id="ox4-wE-0pR"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="caloriesLbl" destination="OWE-nS-zLT" id="Wlc-Mn-CHB"/>
+                        <outlet property="descriptionLbl" destination="ef8-lE-igS" id="m2V-CR-V5N"/>
+                        <outlet property="dishImageView" destination="ApX-iz-K21" id="8ex-pA-oJb"/>
+                        <outlet property="nameField" destination="QjA-12-jxf" id="vgq-Rf-hPY"/>
+                        <outlet property="titleLbl" destination="3ax-HL-ccS" id="LvT-dv-aSq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5UB-wV-HCa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1682.608695652174" y="765.40178571428567"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="twu-4q-8su">
